# youtube-analytics-project

./: pyproject.toml  requirements.txt
homework-1/: main.py
homework-5/: main.py
src/: channel.py  playlist.py  video.py
tests/: smeshariki.json  test_channel.py
