[tool.poetry]
name = "youtube-analytics-project"
version = "0.1.0"
description = ""
authors = ["Olesja1509 <olesja.janjic@gmail.com>"]
readme = "README.md"
packages = [{include = "youtube_analytics_project"}]

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^7.3.2"
coverage = "^7.2.7"
google-api-python-client = "^2.88.0"
pytest-cov = "^4.1.0"
pytube = "^15.0.0"
youtube-dl = "^2021.12.17"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
